--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.14.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.14.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
